<resources>
    <string name="app_name">EM_tuntiesimerkki1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juha Sillanpää</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_directus">Directus (Exercise 3)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_read_test">Data Read Test</string>
    <string name="menu_data">Data Fragment</string>
    <string name="api">Api</string>
    <string name="zoom_on_off">ZOOM on/off</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="city_weather">City Weather</string>
    <string name="open_street_maps">Open Street Maps (Exercise 2)</string>
    <string name="textview">TextView</string>
    <string name="directus_api_test">Directus Api Test</string>
    <string name="get_data_from_server">Getting data from server!</string>
    <string name="fetch">fetch!</string>
    <string name="post_data">post data!</string>
    <string name="send_us_feedback">Send us feedback!</string>
    <string name="your_name">Your name</string>
    <string name="write_your_name">Write your name</string>
    <string name="your_location">Your location</string>
    <string name="where_are_you">Where are you?</string>
    <string name="your_feedback">Your feedback</string>
    <string name="how_did_we_do_today">How did we do today?</string>
    <string name="send_feedback">Send feedback</string>
    <string name="waiting_for_data">WAITING FOR DATA</string>
    <string name="welcome">Welcome!</string>
    <string name="todo">Todo (Exercise 1)</string>
    <string name="todo_item">Todo item</string>
    <string name="basic_auth">Basic Auth (Exercise 3.3)</string>
    <string name="temp_access">Temp Access (Exercise 3.4)</string>
    <string name="weather_station">Weather Station (Exercise 4.1)</string>
    <string name="hive_mqtt">Hive MQTT (Exercise 4.2)</string>
    <string name="custom_view_test">Custom View (Exercise 5)</string>
    <string name="chart">Chart (Extra exercise)</string>
    <string name="google_maps">Google Maps (Exercise 2)</string>
    <string name="maps">Maps</string>
    <string name="basic_auth_header_text">This is a basic authentication test, gets data from https://apingweb.com/api/auth/users and shows it below.</string>
    <string name="get_data">get data</string>
    <string name="message">Message</string>
    <string name="send">send</string>
    <string name="text_header_hive_mqtt">You can send and receive messages. Sent message is also displayed below.</string>
    <string name="nav_header_subtitle">Advanced mobile programming</string>
    <string name="text_home_fragment">Welcome to my app! This has been made for Advanced mobile programming course 2023.</string>
    <string name="get_todo_data">Gets data from https://jsonplaceholder.typicode.com/todos. Items are clickable.</string>
    <string name="temp_access_header_text">Temporary access is done automatically to Directus localhost and time remaining is displayed below with refresh header.</string>
</resources>