<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/dataReadFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/data_read_test" />
        <item
            android:id="@+id/commentApiFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/api" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/maps" />
        <item
            android:id="@+id/openStreetFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/open_street_maps"/>
        <item
            android:id="@+id/feedbackReadFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_directus"/>
        <item
            android:id="@+id/basicAuthFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Basic Auth"/>
        <item
            android:id="@+id/tempAccessFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Temp Access"/>
        <item
            android:id="@+id/weatherStationFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Weather Station"/>
    </group>
</menu>